# GuarderiaKayaks

./: README.md  Refugio del Remo.postman_collection.json  openapi.json  pyproject.toml  pytest.ini
app/: custom_logging.py  logging_config.json  main.py
app/middlewares/: middleware.py
app/models/: models.py  models_swagger.py
app/providers/: aviso_mail.py  consultas.py  database.py
app/routes/: autenticacion.py  clientes.py  embarcaciones.py  kayaks.py  mails.py  pagos.py  parametros.py
app/schemes/: schemes.py
app/security/: config_jwt.py  handler_jwt.py
test/: main.test.py
