[tool.poetry]
name = "guarderiakayaks"
version = "0.1.0"
description = "Sistema MVC para guarderia de kayaks"
authors = ["Julian Decoppet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.30"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
